# a2a-multi-agents

a2a-simple-example/: README.md  __main__.py  agent_executor.py  pyproject.toml
a2a_real_llm/: dummy_data.py
a2a_real_llm/host_agent_adk/: pyproject.toml
a2a_real_llm/host_agent_adk/host/: __init__.py  agent.py
a2a_real_llm/order_agent_langraph/: pyproject.toml
a2a_real_llm/order_agent_langraph/app/: __main__.py  agent.py  agent_executor.py  order_tools.py
a2a_real_llm/product_agent_adk/: __main__.py  agent.py  agent_executor.py  pyproject.toml
